--- a/packages/ui-kit/lib/assets/css/tailwind.css
+++ b/packages/ui-kit/lib/assets/css/tailwind.css
@@ -146,6 +146,12 @@
 
   --color-tooltip-background: var(--tooltip-background);
   --color-tooltip-border: var(--tooltip-border);
+
+  /* AG Grid */
+  --ag-header-row-border: none;
+  /* TODO: ensure styling matching Figma */
+  --ag-background-color: var(--color-base-neutral-900);
+  --ag-foreground-color: var(--color-base-neutral-50);
 }
 
 @layer base {
@@ -654,4 +660,15 @@
   --font-weight-h3: var(--font-weight-important);
   --font-weight-h5: var(--font-weight-important);
   font-family: var(--font-figtree);
+}
+
+/* Notification Grid AG Grid specifics */
+.notification-grid {
+  --ag-accent-color: none; /* No background change on cell hover */
+}
+
+.ag-root-wrapper {
+  padding: 0 0.75rem; /* Horizontal padding for cells which includes their borders */
+  border-bottom-left-radius: 0!important; /* No rounding of the bottom border for pagination panel integration */
+  border-bottom-right-radius: 0!important;
 }
