--- a/packages/ui-kit/lib/assets/css/tailwind.css
+++ b/packages/ui-kit/lib/assets/css/tailwind.css
@@ -152,6 +152,8 @@
   /* TODO: ensure styling matching Figma */
   --ag-background-color: var(--color-base-neutral-900);
   --ag-foreground-color: var(--color-base-neutral-50);
+  --ag-header-background-color: var(--color-base-neutral-900);
+  --ag-accent-color: var(--color-base-brand-500);
 }
 
 @layer base {
@@ -299,6 +301,7 @@
   --font-weight-h3: var(--font-weight-important);
   --font-weight-h5: var(--font-weight-important);
   font-family: var(--font-nunito);
+  --ag-font-family: var(--font-nunito);
 }
 
 .theme-Job-rand-me {
@@ -421,6 +424,7 @@
   --font-weight-h3: var(--font-weight-important);
   --font-weight-h5: var(--font-weight-important);
   font-family: var(--font-roboto);
+  --ag-font-family: var(--font-roboto);
 }
 
 .theme-Bewerbeagentur {
@@ -543,6 +547,7 @@
   --font-weight-h3: 400;
   --font-weight-h5: 400;
   font-family: var(--font-raleway);
+  --ag-font-family: var(--font-raleway);
 }
 
 .theme-Cms {
@@ -660,6 +665,7 @@
   --font-weight-h3: var(--font-weight-important);
   --font-weight-h5: var(--font-weight-important);
   font-family: var(--font-figtree);
+  --ag-font-family: var(--font-figtree);
 }
 
 .ag-root-wrapper {
