--- a/packages/ui-kit/lib/assets/css/tailwind.css
+++ b/packages/ui-kit/lib/assets/css/tailwind.css
@@ -357,9 +357,9 @@
   --color-base-brand-950: #082F49;
 
   --color-action-default: var(--color-base-brand-500);
-  --color-action-semi-transparent-weak: #0EA5E9 10%;
-  --color-action-semi-transparent-medium: #0EA5E9 20%;
-  --color-action-semi-transparent-strong: #0EA5E9 40%;
+  --color-action-semi-transparent-weak: rgba(14, 165, 233, 0.1);
+  --color-action-semi-transparent-medium: rgba(14, 165, 233, 0.2);
+  --color-action-semi-transparent-strong: rgba(14, 165, 233, 0.4);
   --color-action-semi-transparent-dark: var(--color-base-brand-600);
   --color-action-semi-transparent-lighter: var(--color-base-brand-400);
 
@@ -480,9 +480,9 @@
   --color-base-brand-950: #431407;
 
   --color-action-default: var(--color-base-brand-400);
-  --color-action-semi-transparent-weak: #FB923C 10%;
-  --color-action-semi-transparent-medium: #FB923C 20%;
-  --color-action-semi-transparent-strong: #FB923C 40%;
+  --color-action-semi-transparent-weak: rgba(251, 146, 60, 0.1);
+  --color-action-semi-transparent-medium: rgba(251, 146, 60, 0.2);
+  --color-action-semi-transparent-strong: rgba(251, 146, 60, 0.4);
   --color-action-semi-transparent-dark: var(--color-base-brand-500);
   --color-action-semi-transparent-lighter: var(--color-base-brand-300);
 
