--- a/packages/ui-kit/lib/assets/css/tailwind.css
+++ b/packages/ui-kit/lib/assets/css/tailwind.css
@@ -197,6 +197,8 @@
 }
 
 .theme-just-do-add {
+  color-scheme: dark;
+
   --radius-small: 0.375rem;
   --radius-medium: 0.5rem;
   --radius-big: 0.75rem;
