--- a/packages/ui-kit/lib/assets/css/tailwind.css
+++ b/packages/ui-kit/lib/assets/css/tailwind.css
@@ -26,6 +26,7 @@
   --text-xl: 1.25rem;     /* 20px */
   --text-2xl: 1.625rem;   /* 26px */
   --text-3xl: 2rem;       /* 32px */
+  --text-mega: 2.5rem;    /* 40px */
   --text-4xl: 3rem;       /* 48px */
   --text-5xl: 4rem;       /* 64px */
 
