--- a/packages/ui-kit/lib/assets/css/tailwind.css
+++ b/packages/ui-kit/lib/assets/css/tailwind.css
@@ -159,42 +159,51 @@
 
 @layer base {
   h1 {
-    font-size: var(--text-4xl);
     font-weight: var(--font-weight-h1);
     line-height: 100%;
     letter-spacing: -0.06rem;
+    color: var(--color-text-primary);
+    @apply text-3xl md:text-4xl
   }
-
+  
   h2 {
-    font-size: var(--text-3xl);
     font-weight: var(--font-weight-important);
     line-height: 100%;
     letter-spacing: -0.04rem;
+    color: var(--color-text-primary);
+    @apply text-2xl md:text-3xl
   }
 
   h3 {
-    font-size: var(--text-2xl);
     font-weight: var(--font-weight-h3);
     line-height: 110%;
+    color: var(--color-text-primary);
+    @apply text-xl md:text-2xl
   }
 
   h4 {
-    font-size: var(--text-xl);
     font-weight: var(--font-weight-important);
     line-height: 120%;
+    color: var(--color-text-primary);
+    @apply text-lg md:text-xl
   }
 
   h5 {
     font-size: var(--text-lg);
     font-weight: var(--font-weight-h5);
     line-height: 120%;
+    color: var(--color-text-primary);
+    @apply text-md md:text-lg
   }
 
   h6 {
     font-size: var(--text-md);
     font-weight: var(--font-weight-important);
     line-height: 120%;
+    color: var(--color-text-primary);
+    @apply text-sm md:text-md
   }
+  
 }
 
 .theme-just-do-add {
