Refactor environment variables in ecosystem config for clarity and consistency

--- a/apps/platform/config/ecosystem.config.js.j2
+++ b/apps/platform/config/ecosystem.config.js.j2
@@ -5,11 +5,13 @@ module.exports = {
             script: "pnpm nx start platform",
             env: {
                 NODE_ENV: "production",
-                NEXTAUTH_SECRET: "{{ NEXTAUTH_SECRET }}",
+                AUTH_SECRET: "{{ AUTH_SECRET }}",
+                AUTH_ENABLE_TEST_ACCOUNTS: "{{ AUTH_ENABLE_TEST_ACCOUNTS | default(false) }}",
                 AUTH_AUTH0_CLIENT_ID: "{{ AUTH_AUTH0_CLIENT_ID }}",
                 AUTH_AUTH0_CLIENT_SECRET: "{{ AUTH_AUTH0_CLIENT_SECRET }}",
                 AUTH_AUTH0_ISSUER: "{{ AUTH_AUTH0_ISSUER }}",
                 AUTH_AUTH0_AUTHORIZATION_URL: "{{ AUTH_AUTH0_AUTHORIZATION_URL }}",
+                AUTH_AUTH0_ROLES_CLAIM: "{{ AUTH_AUTH0_ROLES_CLAIM }}",
                 AUTH_AUTH0_ROLES_CLAIM_KEY: "{{ AUTH_AUTH0_ROLES_CLAIM_KEY }}",
                 AUTH_ENABLE_TEST_ACCOUNTS: "false",
                 E_CLASS_PLATFORM_SHORT_NAME: "just-do-ad",
