--- a/apps/platform/config/ecosystem.config.js.j2
+++ b/apps/platform/config/ecosystem.config.js.j2
@@ -5,6 +5,8 @@ module.exports = {
             script: "pnpm nx start platform",
             env: {
                 NODE_ENV: "production",
+                NEXTAUTH_SECRET: "{{ NEXTAUTH_SECRET }}",
+                NEXTAUTH_URL: "{{ NEXTAUTH_URL }}",
                 AUTH_SECRET: "{{ AUTH_SECRET }}",
                 AUTH_ENABLE_TEST_ACCOUNTS: "{{ AUTH_ENABLE_TEST_ACCOUNTS | default(false) }}",
                 AUTH_AUTH0_CLIENT_ID: "{{ AUTH_AUTH0_CLIENT_ID }}",
