--- a/apps/platform/config/ecosystem.config.js.j2
+++ b/apps/platform/config/ecosystem.config.js.j2
@@ -14,10 +14,9 @@ module.exports = {
                 AUTH_AUTH0_ISSUER: "{{ AUTH_AUTH0_ISSUER }}",
                 AUTH_AUTH0_AUTHORIZATION_URL: "{{ AUTH_AUTH0_AUTHORIZATION_URL }}",
                 E_CLASS_DEV_MODE: "false",
-                NEXT_PUBLIC_E_CLASS_PLATFORM_SHORT_NAME: "just-do-ad",
+                NEXT_PUBLIC_E_CLASS_RUNTIME: "just-do-ad",
                 NEXT_PUBLIC_E_CLASS_PLATFORM_NAME: "JustDoAd",
-                NEXT_PUBLIC_E_CLASS_PLATFORM_URL: "{{ NEXT_PUBLIC_E_CLASS_PLATFORM_URL }}",
-                NEXT_PUBLIC_E_CLASS_PLATFORM_LOGO_URL: "https://static.wixstatic.com/media/9fe096_91d65ad491464eff8da1c0b2973b3f79~mv2.png/v1/fill/w_110,h_110,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/BA_Kreis_pos_500px.png",
+                NEXT_PUBLIC_APP_URL: "{{ NEXT_PUBLIC_APP_URL }}",
                 NEXT_PUBLIC_E_CLASS_CMS_REST_URL: "{{ NEXT_PUBLIC_E_CLASS_CMS_REST_URL }}",
                 S3_HOSTNAME: "{{ S3_HOSTNAME }}",
                 S3_PORT: "{{ S3_PORT }}",
