feat: update environment variables in ecosystem config for CMS

--- a/apps/cms/config/ecosystem.config.js.j2
+++ b/apps/cms/config/ecosystem.config.js.j2
@@ -13,12 +13,13 @@ module.exports = {
                 AUTH_AUTH0_CLIENT_SECRET: "{{ AUTH_AUTH0_CLIENT_SECRET }}",
                 AUTH_AUTH0_ISSUER: "{{ AUTH_AUTH0_ISSUER }}",
                 AUTH_AUTH0_AUTHORIZATION_URL: "{{ AUTH_AUTH0_AUTHORIZATION_URL }}",
-                AUTH_ENABLE_TEST_ACCOUNTS: "false",
                 NEXT_PUBLIC_E_CLASS_RUNTIME: "cms",
                 E_CLASS_DEV_MODE: "false",
-                E_CLASS_PLATFORM_ID: "1",
                 NEXT_PUBLIC_APP_URL: "{{ NEXT_PUBLIC_APP_URL }}",
-                NEXT_PUBLIC_E_CLASS_CMS_REST_URL: "{{ NEXT_PUBLIC_E_CLASS_CMS_REST_URL }}"
+                NEXT_PUBLIC_E_CLASS_CMS_REST_URL: "{{ NEXT_PUBLIC_E_CLASS_CMS_REST_URL }}",
+                S3_HOSTNAME: "{{ S3_HOSTNAME }}",
+                S3_PORT: "{{ S3_PORT }}",
+                S3_PROTOCOL: "{{ S3_PROTOCOL }}"
             }
         }
     ]
