--- a/packages/ui-kit/lib/assets/css/tailwind.css
+++ b/packages/ui-kit/lib/assets/css/tailwind.css
@@ -206,7 +206,7 @@
   
 }
 
-.theme-just-do-add {
+.theme-just-do-ad {
   --radius-small: 0.375rem;
   --radius-medium: 0.5rem;
   --radius-big: 0.75rem;
